[package]
name = "rsa"
version = "0.1.0"
authors = ["Pablo Pérez Rodríguez <pablo.rabanales@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
num = "0.1"
#modinverse = "0.1"
num-bigint = { version = "0.3", features = ["rand"] }
num-traits = "0.2"